--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт їдальні</title>
+    <title>Інноваційна Шкільна їдальня</title>
     <style>
         body {
             background: linear-gradient(135deg, #1d2b64, #f8cdda);
@@ -15,9 +15,81 @@
             height: 100vh;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: white;
+            flex-direction: column;
+            text-align: center;
         }
 
-        /* Стилізована кнопка */
+        .welcome-text {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .login-container {
+            width: 100%;
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+        }
+
+        .input-group label {
+            font-size: 14px;
+            color: #555;
+            display: block;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .login-btn {
+            width: 100%;
+            padding: 12px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .login-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .login-links {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .login-links a {
+            color: #007BFF;
+            font-size: 16px;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .login-links a:hover {
+            text-decoration: underline;
+        }
+
         #canteen-button {
             display: block;
             width: 300px;
@@ -32,6 +104,7 @@
             text-align: center;
             line-height: 80px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            margin-top: 20px;
         }
 
         #canteen-button:hover {
@@ -39,16 +112,50 @@
             transform: scale(1.05);
         }
 
-        /* Адаптивність для мобільних пристроїв */
         @media (max-width: 768px) {
             #canteen-button {
                 width: 250px;
                 font-size: 20px;
             }
         }
+
+        /* Для адаптивності на мобільних пристроях */
+        @media (max-width: 600px) {
+            .login-container {
+                width: 90%;
+            }
+        }
     </style>
 </head>
 <body>
+
+    <!-- Привітальний текст -->
+    <div class="welcome-text">
+        <p>Добрий день, шановний користувачу!</p>
+        <p>Вітаємо на сайті Інноваційної Шкільної їдальні!</p>
+        <p>Зареєструйтесь або увійдіть у наявний акаунт, щоб зайти на головну сторінку сайту.</p>
+    </div>
+
+    <!-- Форма входу/реєстрації -->
+    <section class="login-container">
+        <h1>Вхід до шкільної їдальні</h1>
+        <form action="login-action.php" method="post">
+            <div class="input-group">
+                <label for="email">Електронна пошта</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="input-group">
+                <label for="password">Пароль</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="login-btn">Увійти</button>
+        </form>
+
+        <div class="login-links">
+            <a class="register-now" href="register.html">Зареєструйтесь зараз</a>
+            <a class="forget-password" href="forgot-password.html">Забули пароль?</a>
+        </div>
+    </section>
 
     <!-- Кнопка для переходу на сайт їдальні -->
     <button id="canteen-button" onclick="goToCanteen()">На сайт їдальні</button>
