--- a/pages/index.html
+++ b/pages/index.html
@@ -72,7 +72,23 @@
         position: relative;
         background-attachment: fixed; /* Фіксує фон при прокручуванні */
       }
-      
+
+      /* Напівпрозорий фон для тексту */
+      .hero h1, .hero p {
+        position: relative;
+        z-index: 10;
+      }
+
+      .hero::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5); /* Темний напівпрозорий фон */
+        z-index: 5;
+      }
 
       .hero h1 {
         font-size: 3rem;
@@ -129,6 +145,29 @@
 
       .auth-container button:hover {
         background: #0056b3;
+      }
+
+      /* Кнопка кошика */
+      .cart-button {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #ff9a9e;
+        color: white;
+        padding: 15px 25px;
+        font-size: 1.2rem;
+        border-radius: 50%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease, background-color 0.3s ease;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+      }
+
+      .cart-button:hover {
+        background-color: #e67e22;
+        transform: scale(1.1);
       }
 
       .footer {
@@ -226,53 +265,44 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">Головна</a></li>
-          <li><a href="#">Ваш гаманець</a></li>
+          <li><a href="index.html">Початкова сторінка</a></li>
+          <li><a href="wallet.html">Ваш гаманець</a></li>
           <li><a href="auth.html">Авторизація</a></li>
+          <li><a href="menu.html">Меню</a></li>
+          <li><a href="cart.html">Кошик</a></li> <!-- Додано посилання на кошик -->
         </ul>
       </nav>
     </header>
 
     <section class="hero">
       <h1>Ласкаво просимо до шкільної їдальні!</h1>
-      <p>Виберіть смачні страви, заробляйте зірочки та отримуйте бонуси!</p>
-      <a href="./menu.html" class="cta-button">Переглянути меню</a>
+      <p>Виберіть страви, заробляйте зірочки і насолоджуйтесь!</p>
+      <a href="menu.html" class="cta-button">Переглянути меню</a>
     </section>
 
+    <!-- Кнопка кошика -->
+    <div class="cart-button">
+      <span>🛒</span> <!-- Іконка кошика -->
+    </div>
+
     <footer>
-      <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
+      <p>&copy; 2024 Шкільна їдальня</p>
       <div class="footer-links">
-        <a href="#">Політика конфіденційності</a>
-        <a href="#">Умови використання</a>
-        <a href="#">Контакти</a>
+        <a href="./contacts.html">Контакти</a>
+        <a href="./privacy-policy.html">Політика конфіденційності</a>
+        <a href="./about.html">Про нас</a>
       </div>
     </footer>
-
     <script>
-      // Сценарій для додавання товарів до кошика
-      const addToCartButton = document.querySelector(".cta-button");
-      addToCartButton.addEventListener("click", () => {
-        // Створити модальне вікно
-        const modal = document.createElement("div");
-        modal.classList.add("modal");
-        modal.innerHTML = `
-          <div class="modal-content">
-            <p>Товар додано до кошика!</p>
-            <button id="confirm">Підтвердити</button>
-            <button id="cancel">Скасувати</button>
-          </div>
-        `;
-        document.body.appendChild(modal);
-
-        // Дії кнопок
-        document.getElementById("confirm").addEventListener("click", () => {
-          alert("Товар додано до кошика!");
-          modal.remove();
-        });
-        document.getElementById("cancel").addEventListener("click", () => {
-          modal.remove();
-        });
-      });
-    </script>
+ 
+      let cart = [];
+  
+      function addToCart(item) {
+        cart.push(item);
+        alert(item + ' додано до кошика!');
+        localStorage.setItem('cart', JSON.stringify(cart));
+      }
+  
+  </script>
   </body>
 </html>
